--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,6 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    implementation 'io.netty:netty-all:4.1.50.Final'
+    testCompile 'junit:junit:4.13'
+    implementation 'io.netty:netty-all:4.1.51.Final'
 }
